--- a/src/components/navigation/Toolbar.astro
+++ b/src/components/navigation/Toolbar.astro
@@ -9,9 +9,9 @@ import FullMenu from "./FullMenu.astro";
            
         </div>
         <div  class="flex items-center gap-20 relative">
-            <a href="" class="link">Gallery</a>
-            <a href="" class="link">Collections</a>
-            <a href="" class="link">About</a>
+            <a href="/" class="link">Gallery</a>
+            <a href="/Collections" class="link">Collections</a>
+            <a href="/About" class="link">About</a>
         </div>
         <div class="flex items-center gap-5 relative">
          
