New Framing Tool

--- a/src/components/navigation/FullMenu.astro
+++ b/src/components/navigation/FullMenu.astro
@@ -13,6 +13,7 @@ const {id} = Astro.props
             <ul>
                 <li><a href="/UploadImage">Upload Image</a></li>
                 <li><a href="/CreateCategory">Create Category/Collection</a></li>
+                <li><a href="/CreateFrame">Create Border/Frame</a></li>
             </ul>
         </div>
         <div>
