--- a/src/components/react/createFrame/components/Preview.module.css
+++ b/src/components/react/createFrame/components/Preview.module.css
@@ -23,4 +23,30 @@
  width: 14px;
  height: 10px;
 }
- 
+ .sprocketsTop,
+.sprocketsBottom {
+  position: absolute;
+  left: 5%;
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(8, 1fr);
+  justify-items: center;
+  pointer-events: none;
+}
+
+.sprocketsTop {
+  top: 4%;
+}
+
+.sprocketsBottom {
+  bottom: 4%;
+}
+
+/* individual hole */
+.sprocket {
+  width: 36px;
+  height: 44px;
+  background: #111;
+  border-radius: 2px;
+  box-shadow: inset 0 0 2px rgb(247, 159, 43);
+}
