--- a/src/components/navigation/FullMenu.astro
+++ b/src/components/navigation/FullMenu.astro
@@ -1,4 +1,5 @@
 ---
+import UploadWindow from "../react/uploadWindow/UploadWindow"
 import Logo from "./logo.astro"
 
 const {id} = Astro.props
@@ -11,8 +12,8 @@ const {id} = Astro.props
         <div>
             <h3>Tools</h3>
             <ul>
-                <li><a href="/UploadImage">Upload Image</a></li>
-                <li><a href="/CreateCategory">Create Category/Collection</a></li>
+                <UploadWindow client:load/>
+                <!-- <li><a href="/CreateCategory">Create Category/Collection</a></li> -->
                 <li><a href="/CreateFrame">Create Border/Frame</a></li>
             </ul>
         </div>
