Collections Page and About Page

--- a/src/components/navigation/FullMenu.astro
+++ b/src/components/navigation/FullMenu.astro
@@ -22,9 +22,11 @@ const {id} = Astro.props
             <ul>
                 <li><a href="">Contact</a></li>
                 <li class="flex items-center gap-4 mr-8 text-[24px]">
+                     <a href="https://www.instagram.com/developedbytim/" target="_blank" class="fa fa-instagram"></a>
                         <a href="https://www.facebook.com/timur.muedinov.9" target="_blank" class="fa fa-facebook"></a>
                         <a href="https://www.youtube.com/channel/UConQOmFJoqkLsz7pBqtapIw/" target="_blank" class="fa fa-youtube"></a>
                         <a href="https://www.linkedin.com/in/timur-muedinov-4a8990152/" target="_blank" class="fa fa-linkedin"></a>
+                       
                 </li>
             </ul>
         </div>
