--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
  
  
 ---
-<Layout title="Upload Image">
+<Layout title="About">
 	<Toolbar  />
 	<main>
         <h1>About This Website</h1>
