--- a/src/pages/Collections.astro
+++ b/src/pages/Collections.astro
@@ -6,7 +6,7 @@ import Layout from '../layouts/Layout.astro';
  
  
 ---
-<Layout title="Upload Image">
+<Layout title="Collections">
 	<Toolbar  />
 	<main>
         <CollectionsPage client:load/>
