Terms,Privacy,License Pages

--- a/src/components/navigation/FullMenu.astro
+++ b/src/components/navigation/FullMenu.astro
@@ -33,9 +33,9 @@ const {id} = Astro.props
     </div>
     
     <footer class="border-t p-4 flex items-center gap-8">
-    <a href="">License</a> 
-    <a href="">Terms</a>
-    <a href="">Privacy Policy</a>
+    <a href="/License">License</a> 
+    <a href="/TermsAndConditions">Terms</a>
+    <a href="/PrivacyPolicy">Privacy Policy</a>
     <a href="/"><Logo className=" scale-50 ml-auto"/></a>
     </footer>
 </div>
