--- a/src/components/navigation/Toolbar.astro
+++ b/src/components/navigation/Toolbar.astro
@@ -1,5 +1,6 @@
 ---
 import FullMenu from "./FullMenu.astro";
+const { pathname } = Astro.url;
 ---
 
 <header>
@@ -8,11 +9,11 @@ import FullMenu from "./FullMenu.astro";
             <a href="/"> <img class="logo" src="/src/components/navigation/assets/DevelopedByTimLogo2Black.png" alt="Logo"></a>
            
         </div>
-        <div  class="flex items-center gap-20 relative">
-            <a href="/" class="link">Gallery</a>
-            <a href="/Collections" class="link">Collections</a>
-            <a href="/About" class="link">About</a>
-        </div>
+      <div class="flex items-center gap-20 relative">
+  <a href="/" class={`link ${pathname === "/" ? "active" : ""}`}>Gallery</a>
+  <a href="/Collections" class={`link ${pathname === "/Collections" ? "active" : ""}`}>Collections</a>
+  <a href="/About" class={`link ${pathname === "/About" ? "active" : ""}`}>About</a>
+</div>
         <div class="flex items-center gap-5 relative">
          
             <div id="burgerMenu" class="burgerBtn flex items-center">
@@ -83,6 +84,34 @@ import FullMenu from "./FullMenu.astro";
         opacity: 1;
         transform: scale(1);
     }
+    .link {
+    position: relative;
+    text-transform: uppercase;
+    font-size: 1.5rem;
+    font-weight: 800;
+    font-family: "Montserrat", sans-serif;
+}
+
+.link::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -6px;
+    width: 100%;
+    height: 3px;
+    background: black;
+    transform: scaleX(0);
+    transform-origin: left;
+    transition: transform 0.2s ease;
+}
+
+.link:hover::after {
+    transform: scaleX(1);
+}
+
+.link.active::after {
+    transform: scaleX(1);
+}
 
 </style>
 
