--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,5 +24,10 @@ import UploadWindow from '../components/react/uploadWindow/UploadWindow';
 		font-size: 20px;
 		line-height: 1.6;
 	}
+    @media (max-width: 768px) {
+  main {
+    max-width: unset;
+  }
+}
  
 </style>
