Dark mode and mobile layout tweaks

--- a/src/components/navigation/FullMenu.astro
+++ b/src/components/navigation/FullMenu.astro
@@ -8,7 +8,7 @@ const {id} = Astro.props
 
 
 <div
-  class="bg-white shadow-md z-30 relative border
+  class="bg-panel shadow-md z-30 relative border
          w-full md:w-[30rem]
          max-h-screen overflow-y-auto"
   id={id}
