--- a/src/pages/About.astro
+++ b/src/pages/About.astro
@@ -20,11 +20,11 @@ import Layout from '../layouts/Layout.astro';
 </Layout>
 
 <style>
-	main {
-		margin: auto;
-		padding: 1rem;
-		width: 100%;
-		max-width: calc(100% - 20rem);
-	}
+main {
+  margin: auto;
+  padding: 1rem;
+  width: 100%;
+  max-width: 1200px; /* caps width on large screens */
+}
 
 </style>
