--- a/src/components/navigation/Toolbar.astro
+++ b/src/components/navigation/Toolbar.astro
@@ -57,12 +57,7 @@ const { pathname } = Astro.url;
 :root[data-theme="dark"] .logo-dark {
   display: block;
 }
-  .link {
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    font-weight: 800;
-    font-family: "Montserrat", sans-serif;
-  }
+ 
   .burger {
     width: 2rem;
     height: 4px;
@@ -108,34 +103,34 @@ const { pathname } = Astro.url;
     opacity: 1;
     transform: scale(1);
   }
-  .link {
-    position: relative;
-    text-transform: uppercase;
-    font-size: 1.5rem;
-    font-weight: 800;
-    font-family: "Montserrat", sans-serif;
-  }
+.link {
+  position: relative;
+  text-transform: uppercase;
+  font-size: 1.5rem;
+  font-weight: 800;
+  font-family: "Montserrat", sans-serif;
+  padding: 0.5rem 1rem;
+  transition: letter-spacing 0.25s ease, opacity 0.25s ease;
+}
+.link {
+  display: inline-block;
+  transition: transform 0.2s ease;
+}
 
-  .link::after {
-    content: "";
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    width: 100%;
-    height: 3px;
-    background:  var(--text);
-    transform: scaleX(0);
-    transform-origin: left;
-    transition: transform 0.2s ease;
-  }
+.link:hover {
+  transform: translateY(-2px);
+}
 
-  .link:hover::after {
-    transform: scaleX(1);
-  }
+.link.active {
+  transform: translateY(-2px);
+    background:var(--panel);
+}
 
-  .link.active::after {
-    transform: scaleX(1);
-  }
+ 
+/* Dark mode tweak */
+:root[data-theme="dark"] .link.active {
+  background: var(--panel);
+}
    @media (max-width: 768px) {
   .main-links {
     display: none;
