--- a/src/pages/Collections.astro
+++ b/src/pages/Collections.astro
@@ -19,5 +19,9 @@ import Layout from '../layouts/Layout.astro';
 		width: 100%;
 		max-width: calc(100% - 20rem);
 	}
-
+  @media (max-width: 768px) {
+  main {
+    max-width: unset;
+  }
+}
 </style>
