--- a/src/components/navigation/FullMenu.astro
+++ b/src/components/navigation/FullMenu.astro
@@ -16,6 +16,7 @@ const {id} = Astro.props
 >
   <div class="p-6 flex flex-col md:flex-row gap-8 md:gap-12">
  <div>
+  <span id="closeMenu" class="absolute md:hidden top-5 right-5 text-xl">❌</span>
             <h3>Page</h3>
             <ul>
                 <li><a href="/">Gallery</a></li>
